@@ -22,5 +22,7 @@ void rebuildBookMarkMenu(void);
 #ifdef _BUILDDOCVIEWER_
 gboolean docLinkTrap(WebKitWebView* web_view,WebKitWebFrame* frame,WebKitNetworkRequest* request,WebKitWebNavigationAction* navigation_action,WebKitWebPolicyDecision* policy_decision, gpointer user_data);
 #endif
+void rebuildTabsMenu(void);
+//v//oid selectTab(GtkWidget* widget,gpointer data);
 
 #endif
